@startuml
hide circle
hide empty members

Title <b>Server - Account Manager</b>\n

class "Server" as sqs
class "AccountManager" as sqs_ua_m{
	-AccountList
	+CreateAccount(Name, Email)
	+Login(LoginInfo)
	+Logout(UserID)
	+GetUserDetails(Name)
	+SetUserDetails(UserUpdateInfo)
	}
class "UserAccount" as sqs_ua
class "UserUpdateInfo" as sqs_ua_ui

sqs *-- "1" sqs_ua_m 
sqs_ua_m o-- "*" sqs_ua 
sqs_ua_m - sqs_ua_ui : Encapsulates User Changes


@enduml